[tool.poetry]
name = "momo_crawler"
version = "0.1.0"
description = ""
authors = ["Yoyo <jack456054@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
pytest = "^7.2.0"
pytest-recording = "^0.12.1"
pytest-mock = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]